# docloom

./: .gitignore  README.md  pyproject.toml
examples/: crosssense.toml
parity/: run_parity.sh
src/docloom/: __init__.py  cli.py  config.py  context.py  engine.py  frontmatter.py  gitio.py  report.py  scaffold.py
src/docloom/resolvers/: __init__.py  litestar_routes.py  python_symbols.py
src/docloom/templates/: SKILL.md  adr-index.md  claude-section.md  doc-conventions.md  docloom.toml  epics-index.md  pre-commit-config.yaml  sprint-status.yaml
tests/: test_engine.py  test_smoke.py
